kustom-portfolio-website/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-website
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: portfolio 
    spec:
      containers:
      - name: portfolio-website-container
        resources: # adjust resource requests and limits for testing.
          # limits:
          #   cpu: "1"
          #   memory: "1Gi"
          # requests:
          #   cpu: "500m"
          #   memory: "512Mi"
