kustom-portfolio-website/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: portfolio-website
  namespace: portfolio-website
  labels:
    app: portfolio-website
  annotations:
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:

  ingressClassName: nginx
  # tls:
  #   - hosts:
  #       - portfolio.example.com
  #     secretName: portfolio-tls
  rules:
    - host: 192.168.1.69.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-website
                port:
                  number: 80
